# sae-redis-writer

./: .gitignore  Dockerfile  Makefile  README.md  docker_build.sh  docker_push.sh  main.py  pyproject.toml  settings.template.yaml
.github/workflows/: build-publish-latest.yaml  create-release.yaml  pr_build.yaml
debian/: changelog  control  install  postinst  preinst  prerm  rediswriter.service  rules
doc/: DEV_README.md
rediswriter/: config.py  rediswriter.py  sender.py  stage.py
tests/: test_imports.py  test_sender.py  test_stage.py
tests/integration/: test_e2e.py
