[tool.poetry]
name = "rediswriter"
version = "2.0.3"
package-mode = false
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "2.12.5"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.5.3" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "1.0.0" }
valkey = "6.1.1"
pydantic-settings = "2.12.0"
prometheus-client = "0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
testcontainers = {extras = ["core"], version = "4.13.3"}

[tool.pytest.ini_options]
markers = [
    "integration"
]
addopts = [
    "-m not integration",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
